2004-11-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arrow): Test for term->filled_polygon() before
	trying to use it.

	* src/term.c (enhanced_recursion): Modify Shift-JIS patch so that
	backslash can always be used to escape the 5 special characters
	&^_~& used in postscript enhanced text mode.

2004-10-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (pr_font): Release current font before loading a new
	one. This is inefficient, but plugs a substantial memory leak.

	* term/x11.trm (X11_graphics): Initialize X11_last_font_used at the
	start of every plot. Fixes font problems caused by multiple plot
	windows with different default fonts.

2004-09-20  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/term.c (enhanced_recursion): Pass unescaped backslash character
	through to PostScript output in enhanced text mode. This is necessary
	for Shift-JIS character encoding to work in enhanced mode (the non-
	enhanced mode already does this). Bug report #998479.

2004-07-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c (show_tics) src/save.c (save_tics): Show and save
	the tic level of user-specific tics.

2004-07-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	Bugfix: caret position of error messages in multiplot modes was
	wrong.
	
	* src/util.c (current_prompt): New variable holding the currently
	used prompt string.
	(PRINT_SPACES_UNDER_PROMPT): Use current_prompt instead of global
	PROMPT macro.  Use a pointer loop instead of a counter.
	(PRINT_SPACES_UNDER_PROMPT, PRINT_SPACES_UPTO_TOKEN): Enclosed
	macro body in do .. while(0).
	(os_error, int_error, int_warn): Use current_prompt instead of
	global macro PROMPT.

	* src/util.h (current_prompt): Declare.

	* src/command.h (PROMPT): Moved this global macro into command.c.

	* src/command.c (PROMPT): Moved macro to here.
	(read_line) [VMS]: Update new global variable current_prompt.
	(read_line) [!VMS]: Likewise.
